--- a/Data_Cleaning_Pipeline.ipynb
+++ b/Data_Cleaning_Pipeline.ipynb
@@ -202,17 +202,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Populate null categorical columns w/ unknown\n",
-        "categorical_cols = ['standardized_operator_name', 'relative_well_position', 'number_of_stages',\n",
-        "                    'batch_frac_classification', 'well_family_relationship', 'frac_type', 'pad_id']\n",
+        "# Impute null continuous features with average.\n",
         "\n",
-        "cols_to_fill_with_minus1 = ['standardized_operator_name', 'pad_id', 'number_of_stages']\n",
+        "continuous_cols = [col for col in df.columns if col not in categorical_cols]\n",
         "\n",
-        "cols_to_fill_with_unknown = [col for col in categorical_cols if col not in cols_to_fill_with_minus1]\n",
+        "continuous_cols.remove('OilPeakRate')\n",
         "\n",
-        "df[cols_to_fill_with_minus1] = df[cols_to_fill_with_minus1].fillna(-1)\n",
+        "print(continuous_cols)\n",
         "\n",
-        "df[cols_to_fill_with_unknown] = df[cols_to_fill_with_unknown].fillna('Unknown')\n",
+        "df[continuous_cols] = df[continuous_cols].fillna(df[continuous_cols].median())\n",
         "\n",
         "analyze_dataframe(df)"
       ],
