--- a/Data_Cleaning_Pipeline.ipynb
+++ b/Data_Cleaning_Pipeline.ipynb
@@ -1,35 +1,21 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "OMHhHDDeuNMP"
+      },
       "source": [
         "# Helper Methods\n",
         "\n",
         "First, a method to check for emptiness among dataframes.\n",
         "\n",
         "Then, feature engineering methods."
-      ],
-      "metadata": {
-        "id": "OMHhHDDeuNMP"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "RfPuyj_PuC8V"
       },
@@ -66,6 +52,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {
+        "id": "FhS8XdXVuYpE"
+      },
+      "outputs": [],
       "source": [
         "def add_neighboring_wells(df):\n",
         "  pad_child_count = dict()\n",
@@ -94,15 +85,13 @@
         "def toe_angle(df):\n",
         "   df['toe_angle'] = np.arctan2(df['horizontal_midpoint_y'] - df['horizontal_toe_y'], df['horizontal_midpoint_x'] - df['horizontal_toe_x'])\n",
         "   return df"
-      ],
-      "metadata": {
-        "id": "FhS8XdXVuYpE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xADBQ6HLufAV"
+      },
       "source": [
         "# Data Cleaning Pipeline:\n",
         "\n",
@@ -123,26 +112,56 @@
         "Finally, one hot encode\n",
         "\n",
         "Final number of entries should be about 19k"
-      ],
-      "metadata": {
-        "id": "xADBQ6HLufAV"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = pd.read_csv(\"/content/training (1).csv\")\n",
-        "\n",
-        "analyze_dataframe(df)"
-      ],
+      "execution_count": 39,
       "metadata": {
         "id": "OO1fyGMIuiT2"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (29692, 31)\n",
+            "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'gross_perforated_length': 7557, 'number_of_stages': 26940, 'total_proppant': 10612, 'total_fluid': 10616, 'true_vertical_depth': 1495, 'ffs_frac_type': 15107, 'proppant_intensity': 10721, 'frac_fluid_intensity': 10746, 'average_stage_length': 26968, 'average_proppant_per_stage': 27003, 'average_frac_fluid_per_stage': 27005, 'proppant_to_frac_fluid_ratio': 11036, 'frac_fluid_to_proppant_ratio': 11036, 'bin_lateral_length': 7557, 'relative_well_position': 9225, 'batch_frac_classification': 9225, 'well_family_relationship': 9225, 'frac_seasoning': 14924, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386}\n",
+            "Infinite entries: {'frac_fluid_to_proppant_ratio': 1}\n",
+            "Most frequent column with null entries: average_frac_fluid_per_stage\n",
+            "Most frequent column with infinite entries: frac_fluid_to_proppant_ratio\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
+      "source": [
+        "df = pd.read_csv(\"training.csv\")\n",
+        "\n",
+        "analyze_dataframe(df)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {
+        "id": "wA6rvfguujMP"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (29692, 25)\n",
+            "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'gross_perforated_length': 7557, 'number_of_stages': 26940, 'total_proppant': 10612, 'total_fluid': 10616, 'true_vertical_depth': 1495, 'proppant_intensity': 10721, 'frac_fluid_intensity': 10746, 'proppant_to_frac_fluid_ratio': 11036, 'frac_fluid_to_proppant_ratio': 11036, 'bin_lateral_length': 7557, 'relative_well_position': 9225, 'batch_frac_classification': 9225, 'well_family_relationship': 9225, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386}\n",
+            "Infinite entries: {'frac_fluid_to_proppant_ratio': 1}\n",
+            "Most frequent column with null entries: number_of_stages\n",
+            "Most frequent column with infinite entries: frac_fluid_to_proppant_ratio\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Drop the columns that are very empty\n",
         "\n",
@@ -153,15 +172,29 @@
         "df = df.drop(columns=columns_to_drop)\n",
         "\n",
         "analyze_dataframe(df)"
-      ],
-      "metadata": {
-        "id": "wA6rvfguujMP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "id": "iuXeeW1iumPA"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (29692, 25)\n",
+            "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'gross_perforated_length': 7557, 'number_of_stages': 26940, 'total_proppant': 10612, 'total_fluid': 10616, 'true_vertical_depth': 1495, 'proppant_intensity': 10721, 'frac_fluid_intensity': 10746, 'proppant_to_frac_fluid_ratio': 11036, 'frac_fluid_to_proppant_ratio': 11036, 'bin_lateral_length': 7557, 'relative_well_position': 9225, 'batch_frac_classification': 9225, 'well_family_relationship': 9225, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386}\n",
+            "Infinite entries: {}\n",
+            "Most frequent column with null entries: number_of_stages\n",
+            "Most frequent column with infinite entries: None\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Deal with np.inf entries\n",
         "\n",
@@ -169,15 +202,29 @@
         "df['frac_fluid_to_proppant_ratio'] = df['frac_fluid_to_proppant_ratio'].replace([np.inf], max_finite_value)\n",
         "\n",
         "analyze_dataframe(df)"
-      ],
-      "metadata": {
-        "id": "iuXeeW1iumPA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "id": "Qoup6Ckvungp"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (29692, 25)\n",
+            "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'gross_perforated_length': 7557, 'total_proppant': 10612, 'total_fluid': 10616, 'true_vertical_depth': 1495, 'proppant_intensity': 10721, 'frac_fluid_intensity': 10746, 'proppant_to_frac_fluid_ratio': 11036, 'frac_fluid_to_proppant_ratio': 11036, 'bin_lateral_length': 7557, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386}\n",
+            "Infinite entries: {}\n",
+            "Most frequent column with null entries: proppant_to_frac_fluid_ratio\n",
+            "Most frequent column with infinite entries: None\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Populate null categorical columns w/ unknown\n",
         "categorical_cols = ['standardized_operator_name', 'relative_well_position', 'number_of_stages',\n",
@@ -192,36 +239,78 @@
         "df[cols_to_fill_with_unknown] = df[cols_to_fill_with_unknown].fillna('Unknown')\n",
         "\n",
         "analyze_dataframe(df)"
-      ],
-      "metadata": {
-        "id": "Qoup6Ckvungp"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {
+        "id": "7541qMdYuo6B"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['gross_perforated_length', 'total_proppant', 'total_fluid', 'true_vertical_depth', 'proppant_intensity', 'frac_fluid_intensity', 'proppant_to_frac_fluid_ratio', 'frac_fluid_to_proppant_ratio', 'bin_lateral_length']\n",
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (29692, 25)\n",
+            "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386}\n",
+            "Infinite entries: {}\n",
+            "Most frequent column with null entries: OilPeakRate\n",
+            "Most frequent column with infinite entries: None\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Impute null continuous features with average.\n",
         "\n",
         "continuous_cols = [col for col in df.columns if col not in categorical_cols]\n",
         "\n",
-        "continuous_cols.remove('OilPeakRate')\n",
+        "for col_name in ['OilPeakRate', 'surface_x', 'surface_y', 'bh_x', 'bh_y', 'horizontal_midpoint_x', 'horizontal_midpoint_y', 'horizontal_toe_x', 'horizontal_toe_y']:\n",
+        "    continuous_cols.remove(col_name)\n",
         "\n",
         "print(continuous_cols)\n",
         "\n",
         "df[continuous_cols] = df[continuous_cols].fillna(df[continuous_cols].median())\n",
         "\n",
         "analyze_dataframe(df)"
-      ],
-      "metadata": {
-        "id": "7541qMdYuo6B"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def min_max_scaling(df):\n",
+        "    return (df - df.min()) / (df.max() - df.min())\n",
+        "\n",
+        "df[continuous_cols] = min_max_scaling(df[continuous_cols].copy())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "Oc59Xl-uuriH"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (29692, 30)\n",
+            "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386, 'surface_bottom_dist': 2087, 'toe_dist': 1001, 'surface_bottom_angle': 2087, 'toe_angle': 1001}\n",
+            "Infinite entries: {}\n",
+            "Most frequent column with null entries: OilPeakRate\n",
+            "Most frequent column with infinite entries: None\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Engineer new features based on developed pipeline\n",
         "\n",
@@ -232,15 +321,29 @@
         "toe_angle(df)\n",
         "\n",
         "analyze_dataframe(df)"
-      ],
-      "metadata": {
-        "id": "Oc59Xl-uuriH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {
+        "id": "HHjT1OsCusCw"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (29692, 28)\n",
+            "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386, 'surface_bottom_dist': 2087, 'toe_dist': 1001, 'surface_bottom_angle': 2087, 'toe_angle': 1001}\n",
+            "Infinite entries: {}\n",
+            "Most frequent column with null entries: OilPeakRate\n",
+            "Most frequent column with infinite entries: None\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Drop features that are not necessary: standardized_operator_name, pad_id\n",
         "\n",
@@ -248,30 +351,58 @@
         "df = df.drop(columns=uninterpretable_cols)\n",
         "\n",
         "analyze_dataframe(df)"
-      ],
-      "metadata": {
-        "id": "HHjT1OsCusCw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {
+        "id": "blIfRYVTuuo8"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (17868, 28)\n",
+            "Null entries: {}\n",
+            "Infinite entries: {}\n",
+            "Most frequent column with null entries: None\n",
+            "Most frequent column with infinite entries: None\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Remove entries with 0 OilPeakRate\n",
         "\n",
         "df = df.dropna()\n",
         "\n",
         "analyze_dataframe(df)"
-      ],
-      "metadata": {
-        "id": "blIfRYVTuuo8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {
+        "id": "YAxstZ20uv-N"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------------------------------------------\n",
+            "Shape: (17868, 99)\n",
+            "Null entries: {}\n",
+            "Infinite entries: {}\n",
+            "Most frequent column with null entries: None\n",
+            "Most frequent column with infinite entries: None\n",
+            "----------------------------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# One hot encode and save\n",
         "\n",
@@ -282,13 +413,31 @@
         "\n",
         "analyze_dataframe(df)\n",
         "\n",
-        "df.to_csv(\"/content/final_product.csv\", index=True)"
-      ],
-      "metadata": {
-        "id": "YAxstZ20uv-N"
-      },
-      "execution_count": null,
-      "outputs": []
+        "df.to_csv(\"clean_data/final_product.csv\", index=True)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
