updated normalization in pipeline

--- a/Data_Cleaning_Pipeline.ipynb
+++ b/Data_Cleaning_Pipeline.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 49,
       "metadata": {
         "id": "RfPuyj_PuC8V"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 50,
       "metadata": {
         "id": "FhS8XdXVuYpE"
       },
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 51,
       "metadata": {
         "id": "OO1fyGMIuiT2"
       },
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 52,
       "metadata": {
         "id": "wA6rvfguujMP"
       },
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 53,
       "metadata": {
         "id": "iuXeeW1iumPA"
       },
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 54,
       "metadata": {
         "id": "Qoup6Ckvungp"
       },
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 55,
       "metadata": {
         "id": "7541qMdYuo6B"
       },
@@ -280,10 +280,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
+        "continuous_cols = [col for col in df.columns if col not in categorical_cols]\n",
+        "continuous_cols.remove('OilPeakRate')\n",
+        "\n",
         "def min_max_scaling(df):\n",
         "    return (df - df.min()) / (df.max() - df.min())\n",
         "\n",
@@ -292,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 57,
       "metadata": {
         "id": "Oc59Xl-uuriH"
       },
@@ -325,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 58,
       "metadata": {
         "id": "HHjT1OsCusCw"
       },
@@ -355,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 59,
       "metadata": {
         "id": "blIfRYVTuuo8"
       },
@@ -384,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 60,
       "metadata": {
         "id": "YAxstZ20uv-N"
       },
