updated categorical vars in pipline to 01

--- a/Data_Cleaning_Pipeline.ipynb
+++ b/Data_Cleaning_Pipeline.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 61,
       "metadata": {
         "id": "RfPuyj_PuC8V"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 62,
       "metadata": {
         "id": "FhS8XdXVuYpE"
       },
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 63,
       "metadata": {
         "id": "OO1fyGMIuiT2"
       },
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 64,
       "metadata": {
         "id": "wA6rvfguujMP"
       },
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 65,
       "metadata": {
         "id": "iuXeeW1iumPA"
       },
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 66,
       "metadata": {
         "id": "Qoup6Ckvungp"
       },
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 67,
       "metadata": {
         "id": "7541qMdYuo6B"
       },
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 69,
       "metadata": {
         "id": "Oc59Xl-uuriH"
       },
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 70,
       "metadata": {
         "id": "HHjT1OsCusCw"
       },
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 71,
       "metadata": {
         "id": "blIfRYVTuuo8"
       },
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 72,
       "metadata": {
         "id": "YAxstZ20uv-N"
       },
@@ -413,6 +413,7 @@
         "                    'well_family_relationship', 'frac_type']\n",
         "\n",
         "df = pd.get_dummies(df, columns = categorical_cols)\n",
+        "df = df.astype(int)\n",
         "\n",
         "analyze_dataframe(df)\n",
         "\n",
