updated final_product int issue

--- a/Data_Cleaning_Pipeline.ipynb
+++ b/Data_Cleaning_Pipeline.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 25,
       "metadata": {
         "id": "RfPuyj_PuC8V"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 26,
       "metadata": {
         "id": "FhS8XdXVuYpE"
       },
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 27,
       "metadata": {
         "id": "OO1fyGMIuiT2"
       },
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 28,
       "metadata": {
         "id": "wA6rvfguujMP"
       },
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 29,
       "metadata": {
         "id": "iuXeeW1iumPA"
       },
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 30,
       "metadata": {
         "id": "Qoup6Ckvungp"
       },
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 31,
       "metadata": {
         "id": "7541qMdYuo6B"
       },
@@ -252,7 +252,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['gross_perforated_length', 'total_proppant', 'total_fluid', 'true_vertical_depth', 'proppant_intensity', 'frac_fluid_intensity', 'proppant_to_frac_fluid_ratio', 'frac_fluid_to_proppant_ratio', 'bin_lateral_length']\n",
+            "['gross_perforated_length', 'total_proppant', 'total_fluid', 'true_vertical_depth', 'proppant_intensity', 'frac_fluid_intensity', 'proppant_to_frac_fluid_ratio', 'frac_fluid_to_proppant_ratio', 'bin_lateral_length']"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
             "----------------------------------------------------------------------------------------------------\n",
             "Shape: (29692, 25)\n",
             "Null entries: {'bh_x': 2087, 'bh_y': 2087, 'horizontal_midpoint_x': 1001, 'horizontal_midpoint_y': 1001, 'horizontal_toe_x': 711, 'horizontal_toe_y': 711, 'OilPeakRate': 10386}\n",
@@ -280,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 33,
       "metadata": {
         "id": "Oc59Xl-uuriH"
       },
@@ -328,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 34,
       "metadata": {
         "id": "HHjT1OsCusCw"
       },
@@ -358,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 35,
       "metadata": {
         "id": "blIfRYVTuuo8"
       },
@@ -387,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 36,
       "metadata": {
         "id": "YAxstZ20uv-N"
       },
@@ -412,13 +419,25 @@
         "categorical_cols = ['relative_well_position', 'number_of_stages', 'batch_frac_classification',\n",
         "                    'well_family_relationship', 'frac_type']\n",
         "\n",
-        "df = pd.get_dummies(df, columns = categorical_cols)\n",
-        "df = df.astype(int)\n",
+        "df = pd.get_dummies(df, columns = categorical_cols, dtype=int)\n",
+        "# for col_name in categorical_cols:\n",
+        "#     df[col_name] = df[col_name].astype(int)\n",
+        "\n",
+        "# categorical_cols = ['relative_well_position', 'number_of_stages', 'batch_frac_classification',\n",
+        "#                     'well_family_relationship', 'frac_type']\n",
+        "# df = df.drop(categorical_cols, axis=1)  # axis=1 indicates columns\n",
         "\n",
         "analyze_dataframe(df)\n",
         "\n",
         "df.to_csv(\"clean_data/final_product.csv\", index=True)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
